issues with aligning checkbox/labels

--- a/style.css
+++ b/style.css
@@ -1,29 +1,28 @@
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  /* outline: 1px solid red; */
 }
 
 /* Header Styles */
-.header{
+.header {
   display: flex;
   justify-content: center;
-  background: #2C3945;
+  background: #2c3945;
   height: 80px;
 }
-.header h1{
+.header h1 {
   align-self: center;
-  color: #EAEBEC;
+  color: #eaebec;
   text-transform: uppercase;
   font-size: 1.5rem;
 }
-h2{
-  color: #2C3945;
+h2 {
+  color: #2c3945;
   margin-top: 30px;
   font-size: 1.5em;
 }
-p{
+p {
   width: 80%;
   font-size: 1.2em;
   color: #417196;
@@ -33,17 +32,16 @@ p{
   border-top: 3px solid #000;
   margin: 45px 10px 0 10px;
 }
-.hr-bottom{
+.hr-bottom {
   margin-bottom: 15px;
 }
-.hr2{
+.hr2 {
   border-bottom: 1px solid #000;
   margin: 2px 10px 0 10px;
 }
 
-
 /* Form Styles */
-.h2-contact{
+.h2-contact {
   align-self: flex-start;
   margin: 25px 0 0 10px;
 }
@@ -58,26 +56,29 @@ fieldset {
   margin-left: 10px;
   padding-top: 25px;
 }
-label{
+label {
   margin: 10px 0 10px 10px;
   font-size: 18px;
   color: #417196;
 }
-input{
+input {
   height: 60px;
-  box-shadow: inset 0.5px 0.5px 1px 1px black;
   border-radius: 5px;
   margin: 0 10px 10px 10px;
   text-align: left;
   font-size: 16px;
   border: none;
 }
-input::placeholder{
+input[name^="contact"] {
+  box-shadow: inset 0.5px 0.5px 1px 1px black;
+}
+
+input::placeholder {
   margin-right: 20px;
   text-align: end;
   font-style: italic;
 }
-select{
+select {
   height: 60px;
   background-color: #f0f1f2;
   border-radius: 5px;
@@ -88,29 +89,37 @@ select{
   font-style: italic;
   border: none;
 }
-#zipcode{
+#zipcode {
   width: 50%;
 }
 
 /* Newsletter Section */
-.bottom-news{
-  margin-left:10px;
+.bottom-news {
+  margin-left: 10px;
 }
-.bottom-news p{
+.bottom-news p {
   text-align: center;
 }
 
+.cb{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+
 /* DRY Classes */
-.flexbox{
+.flexbox {
   display: flex;
   justify-content: center;
   flex-direction: column;
 }
-.flex-child{
+.flex-child {
   align-self: center;
   /* outline: 1px solid red; */
 }
 
-.input-field{
-  background-color: #EFF0F1;
+.input-field {
+  background-color: #eff0f1;
 }
